--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "skipDefaultLibCheck": true,
     "noUnusedLocals": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types.d.ts"],
   "exclude": ["node_modules", "**/dist"]
 }
