--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "c12": "^1.5.1",
     "citty": "^0.1.4",
     "defu": "^6.1.3",
+    "fs-extra": "^11.1.1",
     "pathe": "^1.1.1",
     "tsup": "^7.2.0",
     "unimport": "^3.4.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@types/fs-extra": "^11.0.3",
     "eslint": "^8.52.0",
     "jiti": "^1.20.0",
     "typescript": "^5.2.2",
