--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "url": "https://github.com/zekunjin/ctizen/issues"
   },
   "homepage": "https://github.com/zekunjin/ctizen#readme",
+  "peerDependencies": {
+    "citty": ">=0.1.0"
+  },
   "dependencies": {
     "c12": "^1.5.1",
-    "citty": "^0.1.4",
     "defu": "^6.1.3",
     "fs-extra": "^11.1.1",
     "pathe": "^1.1.1",
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/fs-extra": "^11.0.3",
+    "citty": "^0.1.4",
     "eslint": "^8.52.0",
     "jiti": "^1.20.0",
     "typescript": "^5.2.2",
