--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "c12": "^1.5.1",
     "defu": "^6.1.3",
     "fs-extra": "^11.1.1",
+    "globby": "^13.2.2",
     "pathe": "^1.1.1",
     "tsup": "^7.2.0",
     "unimport": "^3.4.0"
