--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "defu": "^6.1.3",
     "fs-extra": "^11.1.1",
     "globby": "^13.2.2",
+    "hookable": "^5.5.3",
     "pathe": "^1.1.1",
     "tsup": "^7.2.0",
     "unimport": "^3.4.0"
